outputs/csi300-test/eoh/2025-07-28_03-21-56/evaluations/problem_eval9096573626537826497_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi300/gpt.py", line 1
    defined period, to generate a unique alpha factor.}
                                                      ^
SyntaxError: unmatched '}'
